--- a/src/containers/Home/home.css
+++ b/src/containers/Home/home.css
@@ -1,12 +1,73 @@
-.body{
-    margin: 0 auto;
-    padding: 0;
-    background-color: rgba(153, 0, 255, 0.233);
-    width: 100%;
-    height: 100vh;
-    text-align: center;
+body{
+    background-color: #eeeeee;
+    margin: 0px;
+    padding: 0px;
+}
+.heading{
+    margin-top: 30px;
+    display: flex;
+    margin-left: 12%;
 }
 
-.body h1{
-    margin-top: 0px;
+.heading img{
+    border-radius: 100%;
+}
+.heading h3{
+    margin-top: 15px;
+    margin-left: 20px;
+}
+.content{
+    margin-top: 40px;
+    background-color: whitesmoke;
+    width: 60%;
+    margin-left: 20%;
+    border: 1px solid gray;
+    border-radius: 5px;
+    box-shadow: 1px 0px 1px 0px;
+    height: 65vh;
+    display: flex;
+}
+
+.sub-content1{
+    height: 100%;
+}
+
+.sub-content1 p{
+    font-weight: 550;
+    margin-left: 5px;
+    padding: 20px;
+    font-size: 20px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.sub-content1 button{
+    background-color: #4267B2;
+    color: #fff;
+    margin-left: 10%;
+    width: 300px;
+    height: 30px;
+    font-size: 18px;
+    border: 0px solid;
+}
+
+.sub-content1 button:hover{
+    cursor: pointer;
+    width: 300px;
+    height: 30px;
+    color: #fff;
+    border: 2px solid black;
+
+}
+
+.sub-content1 i{
+    margin-right: 30px;
+}
+
+.sub-content2{
+    margin-left: 20px;
+}
+
+.sub-content2 img{
+    margin-top: 60px;
+    width: 100%;
+    height: 45vh;
 }
