--- a/src/containers/Home/home.css
+++ b/src/containers/Home/home.css
@@ -1,5 +1,8 @@
 body{
-    background-color: #eeeeee;
+    /* background-color: #eeeeee; */
+    background-image: linear-gradient(to bottom, rgb(221, 217, 217) 40%, rgb(70, 104, 170) 60%);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     margin: 0px;
     padding: 0px;
 }
@@ -30,6 +33,7 @@ body{
 
 .sub-content1{
     height: 100%;
+    width: 400px;
 }
 
 .sub-content1 p{
@@ -47,6 +51,9 @@ body{
     height: 30px;
     font-size: 18px;
     border: 0px solid;
+    margin-top: 15px;
+    text-transform: none;
+    border-radius: 0px;
 }
 
 .sub-content1 button:hover{
@@ -55,19 +62,24 @@ body{
     height: 30px;
     color: #fff;
     border: 2px solid black;
-
 }
 
 .sub-content1 i{
     margin-right: 30px;
 }
 
-.sub-content2{
-    margin-left: 20px;
-}
+/* .sub-content2{
+    margin-right: 20px;
+} */
 
 .sub-content2 img{
     margin-top: 60px;
     width: 100%;
     height: 45vh;
+    /* margin-right: 360px; */
+}
+
+.material-btn{
+    width: 80px;
+    margin-top: 20px;
 }
