--- a/src/containers/Home/home.css
+++ b/src/containers/Home/home.css
@@ -1,10 +1,13 @@
 body{
-    /* background-color: #eeeeee; */
+    /* background-color: #eeeeee;
     background-image: linear-gradient(to bottom, rgb(221, 217, 217) 40%, rgb(70, 104, 170) 60%);
     background-repeat: no-repeat;
     background-attachment: fixed;
+    height: 627px;
     margin: 0px;
     padding: 0px;
+    z-index: 1; */
+    font-family: Arial, Helvetica, sans-serif;
 }
 .heading{
     margin-top: 30px;
