--- a/src/containers/Home/home.css
+++ b/src/containers/Home/home.css
@@ -9,6 +9,11 @@ body{
     z-index: 1; */
     font-family: Arial, Helvetica, sans-serif;
 }
+.sub-body{
+    background-color: rgb(233, 231, 231);
+    height: 90vh;
+    margin-top: 0px;
+}
 .heading{
     margin-top: 30px;
     display: flex;
