--- a/src/containers/Home/home.css
+++ b/src/containers/Home/home.css
@@ -8,9 +8,10 @@ body{
     padding: 0px;
     z-index: 1; */
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #0B0C10;
 }
 .sub-body{
-    background-color: rgb(233, 231, 231);
+    /* background-color: rgb(233, 231, 231); */
     height: 90vh;
     margin-top: 0px;
 }
@@ -26,6 +27,7 @@ body{
 .heading h3{
     margin-top: 15px;
     margin-left: 20px;
+    color: #66FCF1  ;
 }
 .content{
     margin-top: 40px;
