--- a/src/containers/Home/home.css
+++ b/src/containers/Home/home.css
@@ -7,8 +7,8 @@ body{
     margin: 0px;
     padding: 0px;
     z-index: 1; */
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #0B0C10;
+    font-family: "Poppins-Black";
+    background-color: #192029;
 }
 .sub-body{
     /* background-color: rgb(233, 231, 231); */
@@ -24,21 +24,22 @@ body{
 .heading img{
     border-radius: 100%;
 }
-.heading h3{
+.heading h2{
     margin-top: 15px;
     margin-left: 20px;
-    color: #66FCF1  ;
+    color: #6ccff7;
 }
 .content{
     margin-top: 40px;
-    background-color: whitesmoke;
+    background-color: rgba(214, 216, 218, 0.9);
     width: 60%;
     margin-left: 20%;
     border: 1px solid gray;
-    border-radius: 5px;
+    border-radius: 25px;
     box-shadow: 1px 0px 1px 0px;
     height: 65vh;
     display: flex;
+    box-shadow: 1px 1px 10px 2px #6ccff7;
 }
 
 .sub-content1{
@@ -50,8 +51,9 @@ body{
     font-weight: 550;
     margin-left: 5px;
     padding: 20px;
-    font-size: 20px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    /* font-size: 18px; */
+    font-size: 1.15rem;
+    font-family: Poppins-Medium;
 }
 .sub-content1 button{
     background-color: #4267B2;
@@ -63,7 +65,8 @@ body{
     border: 0px solid;
     margin-top: 15px;
     text-transform: none;
-    border-radius: 0px;
+    border-radius: 15px;
+    font-family: "Poppins-Light";
 }
 
 .sub-content1 button:hover{
@@ -71,7 +74,14 @@ body{
     width: 300px;
     height: 30px;
     color: #fff;
-    border: 2px solid black;
+    border: 3   px solid #6ccff7;
+    transform: translateY(-4px);
+    background-color: #192029;
+    transition: .2s;
+}
+
+.sub-content1 button:focus{
+    outline: none;
 }
 
 .sub-content1 i{
