--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,75 @@
+@font-face {
+  font-family:Poppins-Black;
+  src: url(./Assets/fontFamily/Poppins/Poppins-Black.ttf);
+}
+@font-face {
+  font-family:Poppins-BlackItalic;
+  src: url(./Assets/fontFamily/Poppins/Poppins-BlackItalic.ttf);
+}
+@font-face {
+  font-family: Poppins-Bold;
+  src: url(./Assets/fontFamily/Poppins/Poppins-Bold.ttf);
+}
+@font-face {
+  font-family: Poppins-BoldItalic;
+  src: url(./Assets/fontFamily/Poppins/Poppins-BoldItalic.ttf);
+}
+@font-face {
+  font-family: Poppins-ExtraBold;
+  src: url(./Assets/fontFamily/Poppins/Poppins-ExtraBold.ttf);
+}
+@font-face {
+  font-family: Poppins-ExtraBoldItalic;
+  src: url(./Assets/fontFamily/Poppins/Poppins-ExtraBoldItalic.ttf);
+}
+@font-face {
+  font-family: Poppins-ExtraLight;
+  src: url(./Assets/fontFamily/Poppins/Poppins-ExtraLight.ttf);
+}
+@font-face {
+  font-family: Poppins-ExtraLightItalic;
+  src: url(./Assets/fontFamily/Poppins/Poppins-ExtraLightItalic.ttf);
+}
+@font-face {
+  font-family: Poppins-Italic;
+  src: url(./Assets/fontFamily/Poppins/Poppins-Italic.ttf);
+}
+@font-face {
+  font-family: Poppins-Light;
+  src: url(./Assets/fontFamily/Poppins/Poppins-Light.ttf);
+}
+@font-face {
+  font-family: Poppins-LightItalic;
+  src: url(./Assets/fontFamily/Poppins/Poppins-LightItalic.ttf);
+}
+@font-face {
+  font-family: Poppins-Medium;
+  src: url(./Assets/fontFamily/Poppins/Poppins-Medium.ttf);
+}
+@font-face {
+  font-family:Poppins-MediumItalic;
+  src: url(./Assets/fontFamily/Poppins/Poppins-MediumItalic.ttf);
+}
+@font-face {
+  font-family:Poppins-Regular;
+  src: url(./Assets/fontFamily/Poppins/Poppins-Regular.ttf);
+}
+@font-face {
+  font-family:Poppins-SemiBold;
+  src: url(./Assets/fontFamily/Poppins/Poppins-SemiBold.ttf);
+}
+@font-face {
+  font-family:Poppins-SemiBoldItalic;
+  src: url(./Assets/fontFamily/Poppins/Poppins-SemiBoldItalic.ttf);
+}
+@font-face {
+  font-family:Poppins-Thin;
+  src: url(./Assets/fontFamily/Poppins/Poppins-Thin.ttf);
+}
+@font-face {
+  font-family:Poppins-ThinItalic;
+  src: url(./Assets/fontFamily/Poppins/Poppins-ThinItalic.ttf);
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
