--- a/src/containers/Chat/chat.css
+++ b/src/containers/Chat/chat.css
@@ -1,6 +1,7 @@
 body{
-    overflow-x: hidden;
-    overflow-y: hidden;
+    /* overflow-x: hidden;
+    overflow-y: hidden; */
+    font-family: 'Poppins-Medium';
 }
 
 .user-profile{
@@ -12,13 +13,15 @@ body{
 
 .left-div{
     height: 700px;
-    background-color: rgba(36, 39, 73, 0.904);
+    /* background-color: rgba(36, 39, 73, 0.904); */
+    background-color: #192029;
+    font-family: Poppins-Medium ;
 }
 
 .left-div h3{
     margin-left: 20px;
     color: #fff;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Poppins-Medium;
 }
 
 .left-upper-div{
@@ -29,7 +32,7 @@ body{
     margin-top: 28px;
     color: #fff;
     font-size: 18px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Poppins-Medium;
 }
 
 .left-lower-div{
@@ -42,14 +45,24 @@ body{
 }
 
 .left-lower-div ul button{
-    border: 0px solid #fff;
-    background-color: #fff;
-    border-bottom: 1px solid lightgray;
-    border-right: rgba(36, 39, 73, 0.904);
+    color: #fff;
+    background-color: #192029;
+    border-bottom: 2px solid #6ccff7;
+    border-top: 2px solid #6ccff7;
+    font-family: Poppins-Light;
+    border-left: 0px;
 }
 
 .left-lower-div ul button:hover{
-    background-color: rgb(241, 240, 240);
+    background-color: #30c7fd;
+    color: #333;
+    font-family: Poppins-Medium;
+    cursor: pointer;
+    transition: .3s;
+}
+
+.left-lower-div ul  button:focus{
+    outline: none;
 }
 
 .left-lower-div ul li{
@@ -76,7 +89,8 @@ body{
 .right-div{
     width: 100%;
     position: relative;
-    background-color: rgb(228, 226, 226);
+    /* background-color: rgb(228, 226, 226); */
+    background-color: #BDC0C3;
     /* background-image: url(../../images/chatBackground.jpg);
     background-repeat: no-repeat;
     background-size: cover;
