--- a/src/containers/Chat/chat.css
+++ b/src/containers/Chat/chat.css
@@ -21,7 +21,7 @@ body{
 .left-div h3{
     margin-left: 20px;
     color: #fff;
-    font-family: Poppins-Medium;
+    font-family: Poppins-ExtraLight;
 }
 
 .left-upper-div{
@@ -56,7 +56,7 @@ body{
 .left-lower-div ul button:hover{
     background-color: #30c7fd;
     color: #333;
-    font-family: Poppins-Medium;
+    font-weight: 500;
     cursor: pointer;
     transition: .3s;
 }
@@ -128,14 +128,17 @@ body{
     bottom: 0;
     right: 1;
     margin-bottom: 60px;
-    width: 95%;
+    width: 100%;
     z-index: 9;
+    max-height: 560px;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .chat-content ul{
     list-style-type: none;
     padding: 0px 40px;
-    width: 94%;
+    width: 92%;
 }
 
 .chat-content li{
@@ -144,18 +147,19 @@ body{
 
 .chat-content span{
     max-width: 200px;
-    padding: 5px;
-    font-size: 16px;
+    padding: 5px 10px;
+    font-size: 15px;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
 }
 
 .input-things{
     background-color: #fff;
-    width: 100%;
+    width: 96%;
     height: 60px;
     margin-left: 20px;
     border-radius: 50px;
+    position: sticky;
 }
 
 .input{
@@ -178,6 +182,9 @@ body{
 
 .input-things button:hover{
     cursor: pointer;
+}
+.input-things button:focus{
+    outline: none;
 }
 
 .not-selected-div1 img{
